filter and sort added(not tested)
