# docs/swagger.yaml
@@ -92,6 +92,12 @@ definitions:
   dto.EditRatingRequest:
     properties:
       stars:
+        enum:
+        - 1
+        - 2
+        - 3
+        - 4
+        - 5
         type: integer
       user-id:
         type: string
@@ -252,6 +258,8 @@ definitions:
       avatar:
         type: string
       chat_id:
+        type: string
+      date_of_register:
         type: string
       discord:
         type: string
@@ -618,6 +626,55 @@ paths:
       summary: Getting event by ID
       tags:
       - events
+  /events/filter:
+    get:
+      consumes:
+      - application/json
+      description: Get filtered list of events by params
+      parameters:
+      - in: query
+        name: amount
+        required: true
+        type: integer
+      - in: query
+        name: game
+        type: string
+      - in: query
+        name: max
+        type: string
+      - in: query
+        name: page
+        required: true
+        type: integer
+      - in: query
+        name: time
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of events
+          schema:
+            items:
+              $ref: '#/definitions/entities.Event'
+            type: array
+        "400":
+          description: '{\"error\":\"string\"}'
+          schema:
+            type: object
+        "408":
+          description: '{\"error\":\"string\"}'
+          schema:
+            type: object
+        "500":
+          description: '{\"error\":\"string\"}'
+          schema:
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Get filtered events
+      tags:
+      - events
   /events/join:
     post:
       consumes:
@@ -652,6 +709,56 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Joining the event
+      tags:
+      - events
+  /events/sort:
+    get:
+      consumes:
+      - application/json
+      description: Get sorted list of events by params
+      parameters:
+      - in: query
+        name: amount
+        required: true
+        type: integer
+      - in: query
+        name: direction
+        type: string
+      - enum:
+        - max
+        - time
+        in: query
+        name: field
+        required: true
+        type: string
+      - in: query
+        name: page
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of events
+          schema:
+            items:
+              $ref: '#/definitions/entities.Event'
+            type: array
+        "400":
+          description: '{\"error\":\"string\"}'
+          schema:
+            type: object
+        "408":
+          description: '{\"error\":\"string\"}'
+          schema:
+            type: object
+        "500":
+          description: '{\"error\":\"string\"}'
+          schema:
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Get sorted events
       tags:
       - events
   /events/unjoin:
@@ -1025,6 +1132,100 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Get game details
+      tags:
+      - games
+  /games/filter:
+    get:
+      consumes:
+      - application/json
+      description: Get filtered list of games by params
+      parameters:
+      - in: query
+        name: amount
+        required: true
+        type: integer
+      - in: query
+        name: game-name
+        type: string
+      - in: query
+        name: page
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of games
+          schema:
+            items:
+              $ref: '#/definitions/entities.Game'
+            type: array
+        "400":
+          description: '{\"error\":\"string\"}'
+          schema:
+            type: object
+        "408":
+          description: '{\"error\":\"string\"}'
+          schema:
+            type: object
+        "500":
+          description: '{\"error\":\"string\"}'
+          schema:
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Get filtered games
+      tags:
+      - games
+  /games/sort:
+    get:
+      consumes:
+      - application/json
+      description: Get sorted list of games by params
+      parameters:
+      - in: query
+        name: amount
+        required: true
+        type: integer
+      - in: query
+        name: direction
+        type: string
+      - enum:
+        - events
+        - players
+        - rating
+        in: query
+        name: field
+        required: true
+        type: string
+      - in: query
+        name: page
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of games
+          schema:
+            items:
+              $ref: '#/definitions/entities.Game'
+            type: array
+        "400":
+          description: '{\"error\":\"string\"}'
+          schema:
+            type: object
+        "408":
+          description: '{\"error\":\"string\"}'
+          schema:
+            type: object
+        "500":
+          description: '{\"error\":\"string\"}'
+          schema:
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Get sorted games
       tags:
       - games
   /news:
